# pettagam

./: .gitignore  LICENSE  Mount-FtpDevice.ps1  README.md  YouTube_Audio_Downloader.ipynb  YouTube_Downloader.ipynb  match_experience_summary.csv  matches.csv  overall_experience_summary.csv  player_experience_before_match.csv  playing_xii.csv  process_pipeline.py  settings.gradle.kts  team_experience_by_match.csv  youtube_audio_downloader.py  youtube_downloader.py
.ipynb_checkpoints/: YouTube_Downloader-checkpoint.ipynb
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ftpsync/app/: MainActivity.kt
app/src/main/java/com/ftpsync/app/net/: NsdHelper.kt
app/src/main/java/com/ftpsync/app/service/: FtpServerService.kt
app/src/main/java/com/ftpsync/app/ui/screens/: DashboardScreen.kt
app/src/main/java/com/ftpsync/app/ui/theme/: Color.kt  Theme.kt
app/src/main/res/values/: strings.xml  themes.xml
cricket-nrr/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
cricket-nrr/cricket_nrr/: __init__.py  _dls_table.py  dls.py  formatters.py  models.py  nrr.py  overs.py  standings.py  validators.py
cricket-nrr/cricket_nrr/loaders/: __init__.py  cricsheet_loader.py  csv_loader.py  dict_loader.py
cricket-nrr/examples/: ipl2026_standings.py  nrr_whatif.py
cricket-nrr/tests/: conftest.py  test_dls.py  test_nrr.py  test_overs.py  test_standings.py
