[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cricket-nrr"
version = "0.1.1"
description = "Cricket NRR, DLS par scores, and tournament standings, done correctly"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["cricket", "nrr", "dls", "duckworth-lewis", "ipl", "standings", "t20", "odi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Games/Entertainment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
# Zero mandatory external dependencies — pure Python stdlib
dependencies = []

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
dev    = ["pytest>=7.0", "pytest-cov", "ruff"]

[project.urls]
Homepage   = "https://github.com/heisenricher/cricket-nrr"
Repository = "https://github.com/heisenricher/cricket-nrr"

[tool.setuptools.packages.find]
where   = ["."]
include = ["cricket_nrr*"]

[tool.ruff]
line-length    = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
